[package]
name = "typst2pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

typst = { git = "https://github.com/raulescobar-g/typst.git", tag = "v0.10.0" }
comemo = "0.3"

# typst rendering (for demonstration purpose)
typst-pdf = { git = "https://github.com/raulescobar-g/typst.git", tag = "v0.10.0" }
typst-svg = { git = "https://github.com/raulescobar-g/typst.git", tag = "v0.10.0" }

# utils
time = "0.3"
ttf-parser = "0.20"
